--- a/web/blog.html
+++ b/web/blog.html
@@ -30,14 +30,14 @@
 		<div class="container">
 			<!-- Logo -->
 			<div id="logo">
-				<h1><a href="index.html">Rocksteady</a></h1>
+				<h1><a href="index2.html">Rocksteady</a></h1>
 				<span>BLOG</span>
 			</div>
 
 			<!-- Nav -->
 			<nav id="nav">
 				<ul>
-					<li><a href="index.html">Home</a></li>
+					<li><a href="index2.html">Home</a></li>
 					<li class="active"><a href="blog.html">Blog</a></li>
 				</ul>
 			</nav>
