--- a/web/index_original.html
+++ b/web/index_original.html
@@ -31,14 +31,14 @@
 					
 				<!-- Logo -->
 					<div id="logo">
-						<h1><a href="index.html">Rocksteady</a></h1>
+						<h1><a href="index2.html">Rocksteady</a></h1>
 						<span>BLOG</span>
 					</div>
 				
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="active"><a href="index.html">Home</a></li>
+							<li class="active"><a href="index2.html">Home</a></li>
 							<li><a href="blog.html">Blog</a></li>
 						</ul>
 					</nav>
