--- a/web/index.html
+++ b/web/index.html
@@ -80,10 +80,21 @@
 
                         <div class="patata" align="right">
                             <section>
-                                <form action="register_servlet" autocomplete="on">
+                                <form action="SingUpServlet" autocomplete="on">
                                     UserName:<input type="text" name="username"><br>
-                                    Password: <input type="password" name="userpassword"><br>
-                                    E-mail: <input type="email" name="email" autocomplete="off"><br>
+                                    First name:<input type="text" name="nombre"/><br>
+                                    Last name:<input type="text" name="apellido" value="" /><br>
+                                    Email:<input type="email" name="email" value="" /><br>
+                                    Password : <input type="password" name="password" value="" /><br>
+                                    Confirm Password: <input type="password" name="confirmPassword"/><br>
+                                    WebSite: <input type="text" name="website" value="" /><br>
+                                    Description: <input type="text" name="descriptionSingUp" value="" /><br>
+                                    Twitter: <input type="text" name="twitterSingUp" value="" /><br>
+                                    Facebook: <input type="text" name="facebookSingUp" value="" /><br>
+                                    Instagram: <input type="text" name="instagramSingUp" value="" /><br>
+                                    Linkedin: <input type="text" name="linkedinSingUp" value="" /><br>
+
+                                    Select image: <input type = "file" name="image" /><br>
                                     <center><input type="submit" value="Register"></center>
                                 </form>
                             </section>
